@@ -1216,6 +1216,20 @@ name|google
 operator|.
 name|common
 operator|.
+name|annotations
+operator|.
+name|VisibleForTesting
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
 name|base
 operator|.
 name|Charsets
@@ -6630,8 +6644,7 @@ argument_list|,
 name|scheme
 argument_list|)
 decl_stmt|;
-for|for
-control|(
+comment|// Extract the entry corresponding to the logical name.
 name|Map
 argument_list|<
 name|String
@@ -6639,13 +6652,17 @@ argument_list|,
 name|InetSocketAddress
 argument_list|>
 name|addrs
-range|:
+init|=
 name|addresses
 operator|.
-name|values
+name|get
+argument_list|(
+name|uri
+operator|.
+name|getHost
 argument_list|()
-control|)
-block|{
+argument_list|)
+decl_stmt|;
 for|for
 control|(
 name|InetSocketAddress
@@ -6664,7 +6681,6 @@ argument_list|(
 name|addr
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 name|InetSocketAddress
@@ -6711,6 +6727,18 @@ name|tokenServiceName
 operator|.
 name|toString
 argument_list|()
+return|;
+block|}
+annotation|@
+name|VisibleForTesting
+DECL|method|getResolvedNNAddr ()
+name|InetSocketAddress
+index|[]
+name|getResolvedNNAddr
+parameter_list|()
+block|{
+return|return
+name|nnAddrs
 return|;
 block|}
 block|}
