@@ -1227,6 +1227,51 @@ operator|new
 name|Configuration
 argument_list|()
 decl_stmt|;
+name|addHAConfiguration
+argument_list|(
+name|conf
+argument_list|,
+name|logicalName
+argument_list|)
+expr_stmt|;
+return|return
+name|conf
+return|;
+block|}
+comment|/**    * Add a new HA configuration.    */
+DECL|method|addHAConfiguration (Configuration conf, final String logicalName)
+specifier|public
+specifier|static
+name|void
+name|addHAConfiguration
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|,
+specifier|final
+name|String
+name|logicalName
+parameter_list|)
+block|{
+name|String
+name|nsIds
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMESERVICES
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|nsIds
+operator|==
+literal|null
+condition|)
+block|{
 name|conf
 operator|.
 name|set
@@ -1238,6 +1283,26 @@ argument_list|,
 name|logicalName
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+comment|// append the nsid
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMESERVICES
+argument_list|,
+name|nsIds
+operator|+
+literal|","
+operator|+
+name|logicalName
+argument_list|)
+expr_stmt|;
+block|}
 name|conf
 operator|.
 name|set
@@ -1289,9 +1354,61 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-return|return
+block|}
+DECL|method|setFakeHttpAddresses (Configuration conf, final String logicalName)
+specifier|public
+specifier|static
+name|void
+name|setFakeHttpAddresses
+parameter_list|(
+name|Configuration
 name|conf
-return|;
+parameter_list|,
+specifier|final
+name|String
+name|logicalName
+parameter_list|)
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSUtil
+operator|.
+name|addKeySuffixes
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_HTTP_ADDRESS_KEY
+argument_list|,
+name|logicalName
+argument_list|,
+literal|"nn1"
+argument_list|)
+argument_list|,
+literal|"127.0.0.1:12345"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSUtil
+operator|.
+name|addKeySuffixes
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_HTTP_ADDRESS_KEY
+argument_list|,
+name|logicalName
+argument_list|,
+literal|"nn2"
+argument_list|)
+argument_list|,
+literal|"127.0.0.1:12346"
+argument_list|)
+expr_stmt|;
 block|}
 comment|/** class MyFile contains enough information to recreate the contents of    * a single file.    */
 DECL|class|MyFile
