@@ -997,6 +997,154 @@ expr_stmt|;
 block|}
 block|}
 block|}
+annotation|@
+name|Test
+DECL|method|testMultipleNamespacesConfigured ()
+specifier|public
+name|void
+name|testMultipleNamespacesConfigured
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+name|DFSTestUtil
+operator|.
+name|newHAConfiguration
+argument_list|(
+name|LOGICAL_NAME
+argument_list|)
+decl_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+name|WebHdfsFileSystem
+name|fs
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|nnTopology
+argument_list|(
+name|topo
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|HATestUtil
+operator|.
+name|setFailoverConfigurations
+argument_list|(
+name|cluster
+argument_list|,
+name|conf
+argument_list|,
+name|LOGICAL_NAME
+argument_list|)
+expr_stmt|;
+name|cluster
+operator|.
+name|waitActive
+argument_list|()
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|addHAConfiguration
+argument_list|(
+name|conf
+argument_list|,
+name|LOGICAL_NAME
+operator|+
+literal|"remote"
+argument_list|)
+expr_stmt|;
+name|DFSTestUtil
+operator|.
+name|setFakeHttpAddresses
+argument_list|(
+name|conf
+argument_list|,
+name|LOGICAL_NAME
+operator|+
+literal|"remote"
+argument_list|)
+expr_stmt|;
+name|fs
+operator|=
+operator|(
+name|WebHdfsFileSystem
+operator|)
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|WEBHDFS_URI
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|fs
+operator|.
+name|getResolvedNNAddr
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+literal|null
+argument_list|,
+name|fs
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 end_class
 
