@@ -501,6 +501,9 @@ Release 2.4.1 - UNRELEASED
     HDFS-6329. WebHdfs does not work if HA is enabled on NN but logical URI is
     not configured. (kihwal)
 
+    HDFS-6313. WebHdfs may use the wrong NN when configured for multiple HA NNs
+    (kihwal)
+
 Release 2.4.0 - 2014-04-07 
 
   INCOMPATIBLE CHANGES
